--- a/css/index.css
+++ b/css/index.css
@@ -66,8 +66,9 @@ header > .collapsible-header{
   }
 
 .header-links:hover:after {
-    width: 100%; 
-    left: 0; 
+    width: 100%;
+    left: 0;
+    transition: width 0.6s ease, left 0.6s ease;
 }
 
 .header-white-bg{
@@ -202,15 +203,17 @@ q::after {
     position: absolute;
     z-index: 1;
     color: #fff;
-    background-color: #000000;
+    background-color: #000;
     border: 1px solid #f2f2f2;
     list-style-type: none;
     padding: 0;
     width: 100%;
-    left: 0px;
-    top: 105%;
     border-radius: 10px;
     overflow: hidden;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
 }
 
 .dropdown-menu li {
